Fix Firefox button spacing in recently pushed branches (#915)

--- a/source/content.css
+++ b/source/content.css
@@ -725,6 +725,7 @@ a.tabnav-extra[href$='mastering-markdown/'] {
 	flex-direction: column-reverse;
 }
 .RecentBranches .btn {
+	width: 32px;
 	text-indent: -999999px; /* Hide text */
 }
 .RecentBranches .btn + div {
